syntax = "proto3";

// 消息ID范围（1-65535），共16位，前6位表示模块号，后10位表示模块内的序号，一个模块最多只有1024个消息

enum LOGIN_MSG_ID
{
	ID_ERROR						= 0x0;
	ID_C2S_REQUEST_LOGIN			= 0x01;
}


message CMessageLoginRequest
{
	string  Name			= 1;
	uint32	ChannelID		= 2;
	uint32	WorldID			= 3;
}